--- a/src/assets/css/blog/post.css
+++ b/src/assets/css/blog/post.css
@@ -9,6 +9,7 @@
 .blog .title p {
     font-size: 1em;
     color: #858585;
+    text-align: left;
 }
 
 .blog .title h1 {
@@ -53,6 +54,7 @@
     font-size: 1.2em;
     margin: 20px 0;
     color: #a5a5a5;
+    text-align: left;
 }
 
 .blog .content {
@@ -60,6 +62,7 @@
     line-height: 1.6;
     color: #a5a5a5;
     margin-top: 30px;
+    text-align: left;
 }
 
 .blog .content a {
