--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -92,6 +92,6 @@ footer a:hover {
 
     footer .nav-category {
         margin-left: 0;
-        text-align: center;
+        text-align: left;
     }
 }
