--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -125,7 +125,7 @@
 @media (max-width: 1200px) {
     .article img {
         width: 100%;
-        height: 160px;
+        height: 250px;
         object-fit: cover;
         border-radius: 10px;
     }
@@ -161,6 +161,7 @@
         display: flex;
         gap: 20px;
         align-items: flex-start;
+        max-width: none;
     }
 
     .article img {
