--- a/src/assets/css/projects.css
+++ b/src/assets/css/projects.css
@@ -1,5 +1,5 @@
 .projects {
-    margin: 50px auto;
+    margin: 0px auto;
     width: 100%;
     padding: 10px 0px;
     background-color: #000000;
@@ -31,7 +31,7 @@
 .projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 30px;
+    gap: 50px 10px;
     padding: 20px;
     margin: 0 auto;
     max-width: 1350px;
@@ -113,15 +113,15 @@
     .projects .project p {
         font-size: 0.8em;
     }
+
+    .projects-grid {
+        gap: 55px 10px;
+    }
 }
 
-@media (max-width: 900px) {
-    .projects .project h2 {
-        font-size: 1.0em;
-    }
-
-    .projects .project p {
-        font-size: 0.7em;
+@media (max-width: 1270px) {
+    .projects-grid {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -133,6 +133,10 @@
     .projects .project p {
         font-size: 0.5em;
     }
+
+    .projects-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 /* ---------- */
@@ -140,11 +144,9 @@
     .projects h2 {
         font-size: 1.1em;
         margin-bottom: 10px;
-        color: #dbdbdb;
     }
 
     .projects p {
-        color: #a1a1a1;
         line-height: 1.6;
         font-size: 0.8em;
     }
@@ -162,7 +164,7 @@
 
 @media (max-width: 800px) {
     .projects h2 {
-        font-size: 40px;
+        font-size: 42px;
     }
 
     .projects p {
